--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div class="main-container">
+      <button class="start-button">Start Game</button>
       <div class="game-container">
         <div class="game-buttons">
           <div class="game-button" data-color="green"></div>
