--- a/index.html
+++ b/index.html
@@ -4,12 +4,30 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
     <title>Simon Says</title>
   </head>
   <body>
     <div class="main-container">
-      <button class="start-button">Start Game</button>
+      <button class="start-game">Start Game</button>
+      <div class="game-info">
+        <div class="game-level-container">
+          <div class="game-level-label">Level</div>
+          <div class="game-level-text">0</div>
+        </div>
+        <div class="game-computer-array-container">
+          <div class="game-computer-array-container-label">Computer Colors</div>
+          <div class="game-computer-array-container-text"></div>
+        </div>
+        <div class="game-user-array-container">
+          <div class="game-user-array-container-label">User Colors</div>
+          <div class="game-user-array-container-text"></div>
+        </div>
+        <div class="game-turn-container">
+          <div class="game-turn-label">Turn</div>
+          <div class="game-turn-text"></div>
+        </div>
+      </div>
       <div class="game-container">
         <div class="game-buttons">
           <div class="game-button" data-color="green"></div>
@@ -20,6 +38,6 @@
         <div class="center"></div>
       </div>
     </div>
-    <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="./assets/js/index.js"></script>
   </body>
 </html>
